menu and font fixes with banner and brands

--- a/about-us.html
+++ b/about-us.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index</title>
+    <title>About Us - Sublime Energy Services</title>
     <link rel="stylesheet" href="./css/bootstrap.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-white position-sticky top-0">
+    <nav
+      class="navbar navbar-expand-xl navbar-light bg-white position-sticky top-0"
+    >
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="./index.html">
           <img src="./images/sublime-logo.svg" height="70" alt="" />
         </a>
         <button
@@ -23,16 +25,105 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse pt-md-0 pt-4" id="navbarSupportedContent">
-          <ul class="navbar-nav gap-md-12 gap-4 align-items-center ms-auto mb-2 mb-lg-0">
+        <div
+          class="collapse navbar-collapse pt-md-0 pt-4"
+          id="navbarSupportedContent"
+        >
+          <ul class="navbar-nav gap-4 align-items-center ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link" href="./index.html">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./about-us.html">About Us</a>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Funding
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">History</a>
+                <a class="dropdown-item" href="#">What is Eco 4?</a>
+                <a class="dropdown-item" href="#">How do I qualify?</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Heating Products & Solutions
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <ul class="list-unstyled">
+                  <li class="has-submenu">
+                    <a class="dropdown-item" href="#"
+                      >Insallation & Upgradation</a
+                    >
+                    <div class="submenu">
+                      <a href="" class="submenu-item"
+                        >Central Heating Installation</a
+                      >
+                      <a href="" class="submenu-item">Combination Boiler</a>
+                    </div>
+                  </li>
+                  <li class="has-submenu">
+                    <a class="dropdown-item" href="#">Replacement</a>
+                    <div class="submenu">
+                      <a href="" class="submenu-item"
+                        >Back Boiler Replacement</a
+                      >
+                      <a href="" class="submenu-item"
+                        >G Rated Electric Storage Heater Replacement</a
+                      >
+                    </div>
+                  </li>
+                  <li class="has-submenu">
+                    <a class="dropdown-item" href="#">Renewables</a>
+                    <div class="submenu">
+                      <a href="" class="submenu-item">Air Source Heat Pumps</a>
+                      <a href="" class="submenu-item"
+                        >Ground Source Heat Pumps</a
+                      >
+                    </div>
+                  </li>
+                </ul>
+                <a class="dropdown-item" href="#">Renewables</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                About Us
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="./about-us.html">About Sublime</a>
+                <a class="dropdown-item" href="#">Blogs</a>
+                <a class="dropdown-item" href="#">Why choose us?</a>
+              </div>
             </li>
             <li class="nav-item">
-              <a class="btn btn-primary d-md-inline-block d-block" href="./apply-now.html">Check Eligibility</a>
+              <a
+                class="btn btn-primary d-md-inline-block d-block"
+                href="./apply-now.html"
+                >Check Eligibility</a
+              >
             </li>
           </ul>
         </div>
