--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index</title>
+    <title>Sublime Energy Services</title>
     <link rel="stylesheet" href="./css/bootstrap.css" />
     <link rel="stylesheet" href="./slick/slick.css" />
     <link rel="stylesheet" href="./slick/slick-theme.css" />
   </head>
   <body>
     <nav
-      class="navbar navbar-expand-md navbar-light bg-white position-sticky top-0"
+      class="navbar navbar-expand-xl navbar-light bg-white position-sticky top-0"
     >
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="./index.html">
           <img src="./images/sublime-logo.svg" height="70" alt="" />
         </a>
         <button
@@ -31,14 +31,94 @@
           class="collapse navbar-collapse pt-md-0 pt-4"
           id="navbarSupportedContent"
         >
-          <ul
-            class="navbar-nav gap-md-12 gap-4 align-items-center ms-auto mb-2 mb-lg-0"
-          >
+          <ul class="navbar-nav gap-4 align-items-center ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link" href="./index.html">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./about-us.html">About Us</a>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Funding
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">History</a>
+                <a class="dropdown-item" href="#">What is Eco 4?</a>
+                <a class="dropdown-item" href="#">How do I qualify?</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Heating Products & Solutions
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <ul class="list-unstyled">
+                  <li class="has-submenu">
+                    <a class="dropdown-item" href="#"
+                      >Insallation & Upgradation</a
+                    >
+                    <div class="submenu">
+                      <a href="" class="submenu-item"
+                        >Central Heating Installation</a
+                      >
+                      <a href="" class="submenu-item">Combination Boiler</a>
+                    </div>
+                  </li>
+                  <li class="has-submenu">
+                    <a class="dropdown-item" href="#">Replacement</a>
+                    <div class="submenu">
+                      <a href="" class="submenu-item"
+                        >Back Boiler Replacement</a
+                      >
+                      <a href="" class="submenu-item"
+                        >G Rated Electric Storage Heater Replacement</a
+                      >
+                    </div>
+                  </li>
+                  <li class="has-submenu">
+                    <a class="dropdown-item" href="#">Renewables</a>
+                    <div class="submenu">
+                      <a href="" class="submenu-item">Air Source Heat Pumps</a>
+                      <a href="" class="submenu-item"
+                        >Ground Source Heat Pumps</a
+                      >
+                    </div>
+                  </li>
+                </ul>
+                <a class="dropdown-item" href="#">Renewables</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                About Us
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="./about-us.html">About Sublime</a>
+                <a class="dropdown-item" href="#">Blogs</a>
+                <a class="dropdown-item" href="#">Why choose us?</a>
+              </div>
             </li>
             <li class="nav-item">
               <a
@@ -66,7 +146,7 @@
                   We're experts at securing energy saving funding and installing
                   energy efficient improvements into homes
                 </p>
-                <a href="#millions" class="btn btn-outline-primary"
+                <a href="index.html#millions" class="btn btn-outline-primary"
                   >Check Eligibility</a
                 >
               </div>
@@ -114,7 +194,7 @@
         <div class="row align-items-center g-lg-6 g-4">
           <div class="col-md-8 mx-auto">
             <h2 class="text-white text-center">
-              Millions of homes are qualified under Eco and local Athurity
+              Millions of homes are qualified under Eco and local Authority
               schemes
             </h2>
             <p class="text text-center text-white">
@@ -362,7 +442,7 @@
               however under ECO 4 the following energy-saving measures are
               available
             </p>
-            <ul class="ps-2">
+            <ul class="list-unstyled ps-2">
               <li>
                 <p class="text mb-0">Air Source Heat Pumps</p>
               </li>
@@ -427,19 +507,28 @@
 
     <section class="brands" id="brands">
       <div class="container">
-        <h2 class="text-center text-primary mb-8">Trusted Brands</h2>
-        <div class="row gy-6">
-          <div class="col-lg-3 col-md-6 text-center">
+        <h2 class="text-center text-primary mb-12">Trusted Brands</h2>
+        <div class="trusted-brands">
+          <div>
             <img src="./images/brand-1.png" alt="" />
           </div>
-          <div class="col-lg-3 col-md-6 text-center">
+          <div>
             <img src="./images/brand-2.png" alt="" />
           </div>
-          <div class="col-lg-3 col-md-6 text-center">
+          <div>
             <img src="./images/brand-3.png" alt="" />
           </div>
-          <div class="col-lg-3 col-md-6 text-center">
+          <div>
             <img src="./images/brand-4.png" alt="" />
+          </div>
+          <div>
+            <img src="./images/brand-4.webp" alt="" />
+          </div>
+          <div>
+            <img src="./images/brand-5.webp" alt="" />
+          </div>
+          <div>
+            <img src="./images/brand-6.webp" alt="" />
           </div>
         </div>
       </div>
@@ -453,14 +542,14 @@
             <p class="text">
               has years of experience helping individuals, landlords, and
               families in their journey to Energy Efficient homes. Our dedicated
-              team is working alongside with Gov. of United Kingdom for
-              improving efficient energy use.
+              team is working alongside the Gov. of United Kingdom for improving
+              efficient energy use.
             </p>
           </div>
           <div class="col-12">
             <div class="background">
               <div class="row align-items-center g-lg-6 g-4">
-                <div class="col-md-6 text-md-end">
+                <div class="col-md-6 text-center">
                   <img src="./images/mark-map.png" alt="" />
                 </div>
                 <div class="col-md-6">
@@ -506,6 +595,38 @@
         autoplaySpeed: 5000,
         arrows: true,
         dots: true,
+      });
+
+      $(".trusted-brands").slick({
+        autoplay: true,
+        autoplaySpeed: 2000,
+        arrows: true,
+        dots: true,
+        slidesToShow: 4,
+        slidesToScroll: 1,
+        responsive: [
+          {
+            breakpoint: 1024,
+            settings: {
+              slidesToShow: 3,
+              infinite: true,
+              dots: true,
+            },
+          },
+          {
+            breakpoint: 600,
+            settings: {
+              slidesToShow: 2,
+            },
+          },
+          {
+            breakpoint: 480,
+            settings: {
+              slidesToShow: 1,
+              slidesToScroll: 1,
+            },
+          },
+        ],
       });
     </script>
   </body>
