brands image size fix

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                   We're experts at securing energy saving funding and installing
                   energy efficient improvements into homes
                 </p>
-                <a href="" class="btn btn-outline-primary">Learn More</a>
+                <a href="./index.html#millions" class="btn btn-outline-primary">Learn More</a>
               </div>
               <div class="col-lg-5">
                 <img
