--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
 
     <section class="hero">
       <div class="banners">
-        <div>
-          <div class="container">
-            <div class="row gy-4 justify-content-between align-items-center">
-              <div class="col-lg-7">
+        <div class="home-banner banner-1">
+          <div class="container h-100">
+            <div class="row h-100 gy-4 justify-content-between align-items-center">
+              <div class="col-lg-7 ms-auto text-end">
                 <h1>
                   Sublime Home <br />
                   Upgrades & Installation
@@ -150,20 +150,20 @@
                   >Check Eligibility</a
                 >
               </div>
-              <div class="col-lg-4">
+              <!-- <div class="col-lg-4">
                 <img
                   src="./images/banner-1.jpg"
                   class="w-100"
                   height="auto"
                   alt=""
                 />
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
-        <div>
-          <div class="container">
-            <div class="row gy-4 justify-content-between align-items-center">
+        <div class="home-banner banner-2">
+          <div class="container h-100">
+            <div class="row h-100 gy-4 justify-content-between align-items-center">
               <div class="col-lg-7">
                 <h1>
                   Funded energy <br />
@@ -591,10 +591,11 @@
 
     <script>
       $(".banners").slick({
-        autoplay: true,
+        autoplay: false,
         autoplaySpeed: 5000,
         arrows: true,
         dots: true,
+        adaptiveHeight: true
       });
 
       $(".trusted-brands").slick({
