--- a/about-us.html
+++ b/about-us.html
@@ -85,6 +85,9 @@
                       <a href="" class="submenu-item"
                         >G Rated Electric Storage Heater Replacement</a
                       >
+                      <a href="" class="submenu-item"
+                        >Inefficient Boiler Replacement</a
+                      >
                     </div>
                   </li>
                   <li class="has-submenu">
@@ -94,10 +97,12 @@
                       <a href="" class="submenu-item"
                         >Ground Source Heat Pumps</a
                       >
+                      <a href="" class="submenu-item"
+                        >Solar PV</a
+                      >
                     </div>
                   </li>
                 </ul>
-                <a class="dropdown-item" href="#">Renewables</a>
               </div>
             </li>
             <li class="nav-item dropdown">
@@ -113,7 +118,9 @@
                 About Us
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="./about-us.html">About Sublime</a>
+                <a class="dropdown-item" href="./about-us.html"
+                  >About Sublime</a
+                >
                 <a class="dropdown-item" href="#">Blogs</a>
                 <a class="dropdown-item" href="#">Why choose us?</a>
               </div>
