--- a/apply-now.html
+++ b/apply-now.html
@@ -85,6 +85,9 @@
                       <a href="" class="submenu-item"
                         >G Rated Electric Storage Heater Replacement</a
                       >
+                      <a href="" class="submenu-item"
+                        >Inefficient Boiler Replacement</a
+                      >
                     </div>
                   </li>
                   <li class="has-submenu">
@@ -94,10 +97,10 @@
                       <a href="" class="submenu-item"
                         >Ground Source Heat Pumps</a
                       >
+                      <a href="" class="submenu-item">Solar PV</a>
                     </div>
                   </li>
                 </ul>
-                <a class="dropdown-item" href="#">Renewables</a>
               </div>
             </li>
             <li class="nav-item dropdown">
@@ -113,7 +116,9 @@
                 About Us
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="./about-us.html">About Sublime</a>
+                <a class="dropdown-item" href="./about-us.html"
+                  >About Sublime</a
+                >
                 <a class="dropdown-item" href="#">Blogs</a>
                 <a class="dropdown-item" href="#">Why choose us?</a>
               </div>
@@ -238,7 +243,7 @@
                       >How do you currently heat your home?</label
                     >
                     <select name="" id="" class="form-select">
-                      <option value="" disabled selected>
+                      <option value="" selected>
                         No central heating/ no radiators
                       </option>
                       <option value="">Combi Boiler Older than 15 Years</option>
@@ -337,16 +342,16 @@
                 <h4>Personal Information</h4>
                 <div class="row gy-6">
                   <div class="col-12">
-                    <label for="" class="form-label">First Name</label>
+                    <label for="" class="form-label">Full Name</label>
                     <input type="text" class="form-control" />
                   </div>
                   <div class="col-12">
                     <label for="" class="form-label">Phone</label>
-                    <input type="tel" class="form-control" />
+                    <input type="tel" class="form-control" required />
                   </div>
                   <div class="col-12">
                     <label for="" class="form-label">Email</label>
-                    <input type="email" class="form-control" />
+                    <input type="email" class="form-control" required />
                   </div>
                   <div class="col-12">
                     <div class="d-flex gap-2 justify-content-end">
