--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
                       <a href="" class="submenu-item"
                         >G Rated Electric Storage Heater Replacement</a
                       >
+                      <a href="" class="submenu-item"
+                        >Inefficient Boiler Replacement</a
+                      >
                     </div>
                   </li>
                   <li class="has-submenu">
@@ -96,10 +99,12 @@
                       <a href="" class="submenu-item"
                         >Ground Source Heat Pumps</a
                       >
+                      <a href="" class="submenu-item"
+                        >Solar PV</a
+                      >
                     </div>
                   </li>
                 </ul>
-                <a class="dropdown-item" href="#">Renewables</a>
               </div>
             </li>
             <li class="nav-item dropdown">
@@ -115,7 +120,9 @@
                 About Us
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="./about-us.html">About Sublime</a>
+                <a class="dropdown-item" href="./about-us.html"
+                  >About Sublime</a
+                >
                 <a class="dropdown-item" href="#">Blogs</a>
                 <a class="dropdown-item" href="#">Why choose us?</a>
               </div>
@@ -136,7 +143,9 @@
       <div class="banners">
         <div class="home-banner banner-1">
           <div class="container h-100">
-            <div class="row h-100 gy-4 justify-content-between align-items-center">
+            <div
+              class="row h-100 gy-4 justify-content-between align-items-center"
+            >
               <div class="col-lg-7 ms-auto text-end">
                 <h1>
                   Sublime Home <br />
@@ -146,7 +155,7 @@
                   We're experts at securing energy saving funding and installing
                   energy efficient improvements into homes
                 </p>
-                <a href="index.html#millions" class="btn btn-outline-primary"
+                <a href="./apply-now.html" class="btn btn-outline-primary"
                   >Check Eligibility</a
                 >
               </div>
@@ -163,7 +172,39 @@
         </div>
         <div class="home-banner banner-2">
           <div class="container h-100">
-            <div class="row h-100 gy-4 justify-content-between align-items-center">
+            <div
+              class="row h-100 gy-4 justify-content-between align-items-center"
+            >
+              <div class="col-lg-7">
+                <h1>
+                  Sublime Home <br />
+                  Installation
+                </h1>
+                <p class="punch">
+                  We're experts at securing energy saving funding and installing
+                  energy efficient improvements into homes and businesses
+                </p>
+                <a href="./index.html#millions" class="btn btn-outline-primary"
+                  >Learn More</a
+                >
+              </div>
+              <div class="col-lg-5">
+                <img
+                  src="./images/banner-2.png"
+                  class="w-100"
+                  height="auto"
+                  style="max-height: 400px; object-fit: contain"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="home-banner banner-2">
+          <div class="container h-100">
+            <div
+              class="row h-100 gy-4 justify-content-between align-items-center"
+            >
               <div class="col-lg-7">
                 <h1>
                   Funded energy <br />
@@ -173,11 +214,13 @@
                   We're experts at securing energy saving funding and installing
                   energy efficient improvements into homes
                 </p>
-                <a href="./index.html#millions" class="btn btn-outline-primary">Learn More</a>
+                <a href="./index.html#millions" class="btn btn-outline-primary"
+                  >Learn More</a
+                >
               </div>
               <div class="col-lg-5">
                 <img
-                  src="./images/banner-2.png"
+                  src="./images/home-banner-3.jpg"
                   class="w-100"
                   height="auto"
                   alt=""
@@ -592,10 +635,10 @@
     <script>
       $(".banners").slick({
         autoplay: false,
-        autoplaySpeed: 5000,
+        autoplaySpeed: 4000,
         arrows: true,
         dots: true,
-        adaptiveHeight: true
+        adaptiveHeight: true,
       });
 
       $(".trusted-brands").slick({
